[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "torchcam"
version = "1.1.0"
description = "Monocular depth estimation on live CV capture"
authors = ["Chino Franco <chino.franco@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "torchcam" }
]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.1"
timm = "^1.0.9"
torch = "^2.4.1"
typer = "^0.12.5"
colorama = "^0.4.6"
tqdm = "^4.66.5"
click = "^8.1.7"
opencv-python = "^4.10.0.84"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pre-commit = "^3.8.0"
black = "^24.8.0"
coverage = "^7.6.1"

[tool.poetry.scripts]
torchcam = "torchcam.main:cli"
