[metadata]
name = depthcam
version = 1.0.0
author = Joaquin Gabriel Franco
author_email = chino.franco@gmail.com
description = Real-time colored depth map of webcam video stream generated using PyTorch MiDaS model
long_description = file: README.md
long_description_content_type = text/markdown

[options]
install_requires =
    torch
    numpy
    opencv-python
    timm
    typer

package_dir=
    =src

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    heatmap = depthcam.app:my_function
    standard = depthcam.app:another_function

[options.extras_require]
notebook = jupyter, matplotlib